# quaketwin-dhaka

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: repository-topics.txt
api/: main.py
config/: cascade.yaml  dhaka.yaml  diurnal_exposure.yaml  hazard_gmpe.yaml  resilience.yaml  response.yaml  scenarios.yaml
data/models/: cascade_gnn_ensemble_metrics.json  cascade_gnn_metrics.json
data/schema/: dhaka_graph.sql
docs/: methodology.md  results_summary.md  reviewer_response.md
notebooks/: 01_phase0_data_inventory.ipynb  02_phase1_hazard_pipeline.ipynb
outputs/: eri_weight_comparison.json  external_validation.json  gnn_architecture_ablation.json  latin_hypercube_uq.json  mc_convergence.json  sensitivity_studies.json  vs30_sensitivity.json
paper/: README.md  cas-refs.bib  main.tex
scripts/: analyze_pop_outliers.py  build_building_profiles.py  build_results_summary.py  check_data.py  extract_dhaka_osm.py  fetch_open_buildings_heights.py  fetch_vs30.py  generate_dt_architecture_figure.py  gnn_architecture_ablation.py  init_schema.py  inspect_osm.py  mc_convergence_study.py  publish_phase2.py  publish_phase3.py  publish_phase4.py  publish_phase5.py  regenerate_publication_figures.py  run_cascade.py  run_diurnal_exposure.py  run_eri_weight_comparison.py  run_external_validation.py  run_hazard_scenario.py  run_latin_hypercube_uq.py  run_quality_upgrades.py  run_resilience_index.py  run_response_model.py  run_scenario_ensemble.py  run_sensitivity_studies.py  run_vs30_sensitivity.py  set_github_topics.ps1  train_cascade_gnn.py  train_cascade_gnn_ensemble.py  train_collapse_model.py
tests/: test_phase1.py  test_phase2_publish.py  test_phase4_response.py
(+56 files in other folders)
