[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quaketwin-dhaka"
version = "0.1.0"
description = "Open earthquake digital twin for Greater Dhaka — hazard, exposure, cascade, GraphSAGE surrogate"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "earthquake",
    "digital-twin",
    "dhaka",
    "bangladesh",
    "openstreetmap",
    "disaster-risk",
    "cascading-failure",
    "graph-neural-network",
    "seismic-hazard",
    "urban-resilience",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "numpy>=2.1.0",
    "httpx>=0.27.0",
    "s2sphere>=0.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "jupyter>=1.1.0",
    "matplotlib>=3.9.0",
    "ruff>=0.8.0",
]
geo = [
    "geopandas>=1.0.1",
    "shapely>=2.0.6",
    "pyproj>=3.7.0",
    "scipy>=1.14.0",
    "osmium>=4.0.0",
]
db = [
    "sqlalchemy>=2.0.36",
    "geoalchemy2>=0.16.0",
    "psycopg2-binary>=2.9.10",
    "networkx>=3.4.0",
]
phase2 = [
    "geopandas>=1.0.1",
    "shapely>=2.0.6",
    "scipy>=1.14.0",
    "rasterio>=1.4.0",
    "osmium>=4.0.0",
]
ml = [
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
]
gnn = [
    "networkx>=3.4.0",
    "torch>=2.4.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
